--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Parallex Website</title>
-	<link rel="stylesheet" type="text/css" href="project3.css">
+	<link rel="stylesheet" type="text/css" href="{{url_for("project3.css")}}>
 </head>
 <body>
 	<div class="main_cont1">
